# create-pg-rss

./: .gitignore  README.md  make_feed.py  pyproject.toml
.github/workflows/: poetry-ci.yml
