[tool.black]
line-length = 88
exclude = '''
(
    __pycache__
  | ^/[.]
  | ^/doc
  | ^/env
)
'''

[tool.poetry]
name = "pg-feed"
version = "0.1.0"
description = ""
authors = ["App Champ <appenginechamp>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
requests-cache = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
